--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
+          cache: "pnpm"
       - run: pnpm install
       - run: pnpm lint
       - run: pnpm build
@@ -28,7 +29,7 @@ jobs:
           github.event_name == 'push' &&
           !contains(github.event.head_commit.message, '[skip-release]')
         run: |
-          pnpm add -g semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github && 
+          npm install -g semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github && 
           semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
