--- a/package.json
+++ b/package.json
@@ -42,23 +42,24 @@
   "scripts": {
     "build": "unbuild",
     "dev": "vitest dev",
-    "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs . && prettier -c src test",
-    "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs . --fix && prettier -c src test -w",
-    "prepack": "pnpm run build",
-    "test": "pnpm lint && vitest run --coverage"
+    "lint": "eslint . && prettier -c .",
+    "lint:fix": "eslint . --fix && prettier -w .",
+    "prepack": "pnpm build",
+    "test": "pnpm lint && pnpm test:types && vitest run --coverage",
+    "test:types": "tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@vitest/coverage-v8": "^0.32.2",
-    "changelogen": "^0.5.3",
-    "eslint": "^8.43.0",
-    "eslint-config-unjs": "^0.2.1",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3",
-    "unbuild": "^1.2.1",
-    "vitest": "^0.32.2"
+    "@types/node": "^22.8.2",
+    "@vitest/coverage-v8": "^2.1.4",
+    "changelogen": "^0.5.7",
+    "eslint": "^9.13.0",
+    "eslint-config-unjs": "^0.4.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "unbuild": "^2.0.0",
+    "vitest": "^2.1.4"
   },
-  "packageManager": "pnpm@8.6.3",
+  "packageManager": "pnpm@9.12.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/morgbn/uncsrf.git"
